# Bonsai

./: .bonsai.yaml  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  Backlog.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN-companion-app.md  HANDBOOK.md  LICENSE  Makefile  README.md  RESEARCH-catalog-expansion.md  RESEARCH-concepts.md  RESEARCH-evals.md  RESEARCH.md  SECURITY.md  embed.go  go.mod  go.sum  main.go  pyproject.toml
.claude/: loop.md  settings.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
agent/: index.md
agent/Core/: identity.md  memory.md
agent/Skills/: bubbletea.md
assets/demos/: init-linkedin.tape  init.tape
catalog/scaffolding/: INDEX.md.tmpl  MEMORY.md.tmpl  manifest.yaml
cmd/: add.go  add_nonint_test.go  add_redesign.go  add_test.go  catalog.go  catalog_test.go  completion.go  guide.go  guide_test.go  init.go  init_flow.go  init_nonint_test.go  init_redesign.go  list.go  list_test.go  remove.go  remove_nonint_test.go  root.go  update.go  update_nonint_test.go  update_test.go  validate.go  validate_test.go
cmd/bonsai/: main.go
docs/: README.md  agent-interface.md  cli.md  concepts.md  custom-files.md  formats.md  quickstart.md  triggers.md  working-with-agents.md
internal/catalog/: catalog.go  catalog_test.go
internal/config/: config.go  (+3 more)
station/: CLAUDE.md  INDEX.md  code-index.md
website/: astro.config.mjs  package-lock.json  package.json
(+675 files in other folders)
