[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bonsai-agents"
version = "0.1.0"
description = "CLI tool for scaffolding Claude Code agent workspaces"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.12",
    "questionary>=2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "rich>=13.0",
]

[project.scripts]
bonsai = "bonsai.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bonsai"]
